--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -6,5 +6,23 @@ html, body {
 body {
   margin: 0;
   padding: 0;
-  font-family: 'bentonsans', sans-serif;
+  font-family: 'MetricWeb', sans-serif;
+  color: #333;
+}
+
+.root,
+.layout-wrapper {
+  width: 100%;
+  height: 100%;
+}
+
+.main-container {
+  position: relative;
+}
+
+.aside {
+  position: absolute;
+  right: 20px;
+  top: 85px;
+  width: 100px;
 }
