--- a/src/components/people/graph/people-graph-container.css
+++ b/src/components/people/graph/people-graph-container.css
@@ -1,4 +1,6 @@
 .people-graph-container {
+    margin: 20px 0;
+    position: relative;
     /* TEMPORARY */
     background: #f6e9d8;
     min-height: 500px;
@@ -6,5 +8,12 @@
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    margin: 20px 0;
+}
+
+.people-graph {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
 }
