--- a/src/components/common/hint/hint.css
+++ b/src/components/common/hint/hint.css
@@ -1,7 +1,7 @@
 .hint {
     background: #FFF8EF;
     border-top: solid 1px #CEC6B9;
-    line-height: 45px;
-    padding: 0 10px;
+    padding: 10px;
     font-size: 18px;
+    line-height: 1.4em;
 }
