--- a/src/components/common/header/header.css
+++ b/src/components/common/header/header.css
@@ -13,12 +13,16 @@
     display: block;
     margin: 10px;
 }
+.six-deg-logo {
+    width: 40px;
+    height: 40px;
+}
 
 .page-people .page-people-inner,
 .page-connections .page-connections-inner {
     position: relative;
     display: inline-block;
-    font-family: 'Metric';
+    font-family: 'MetricWeb', sans-serif;
 }
 
 .header-copy-inner em {
