--- a/src/components/connections/graph/connections-graph-container.css
+++ b/src/components/connections/graph/connections-graph-container.css
@@ -2,11 +2,18 @@
     margin: 0;
     position: relative;
     min-height: 500px;
-
-    /* TEMPORARY */
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
+    z-index: 2;
+    background-color: #FFF8EF;
+}
+.connections-graph-container:after {
+    content: '';
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    z-index: -1;
+    width: 100vw;
+    height: 100%;
+    background: #FFF8EF;
+    transform: translateX(-50%);
 }
