--- a/src/components/PageTitle/PageTitle.css
+++ b/src/components/PageTitle/PageTitle.css
@@ -1,5 +1,11 @@
 .page-title {
+    margin: 30px 0;
     text-align: center;
     font-size: 24px;
+    font-weight: 500;
+}
+.page-title--secondary {
+    text-align: left;
+    font-size: 20px;
     font-weight: 500;
 }
