--- a/src/components/PeopleSlider/PeopleSlider.css
+++ b/src/components/PeopleSlider/PeopleSlider.css
@@ -2,6 +2,7 @@
     outline: none;
 }
 .people-data-wrapper {
+    padding-top: 20px;
     height: 260px;
     text-align: center;
     position: relative;
