--- a/src/components/ArticleList/ArticleList.css
+++ b/src/components/ArticleList/ArticleList.css
@@ -1,21 +1,3 @@
-.related-content {
-    margin-bottom: 20px;
-}
-.related-content-title {
-    padding: 20px 0;
-    font-size: 24px;
-    font-weight: 400;
-    border-bottom: 1px solid #cec6b9;
-}
-.related-content-item {
-    padding: 10px 5px;
-    font-family: FinancierDisplayWeb, serif;
-    font-size: 18px;
-    height: 50px;
-    font-weight: 300;
-    border-bottom: 1px solid #cec6b9;
-}
-.related-content-item a {
-    text-decoration: none;
-    color: #33302e;
+.article-list {
+    margin-top: 10px;
 }
