--- a/src/components/PageTitle/PageTitle.css
+++ b/src/components/PageTitle/PageTitle.css
@@ -1,11 +1,6 @@
 .page-title {
-    margin: 30px 0;
+    line-height: 80px;
     text-align: center;
     font-size: 24px;
-    font-weight: 500;
-}
-.page-title--secondary {
-    text-align: left;
-    font-size: 20px;
     font-weight: 500;
 }
