--- a/src/components/PageTitle/PageTitle.css
+++ b/src/components/PageTitle/PageTitle.css
@@ -1,5 +1,5 @@
 .page-title {
-    line-height: 80px;
+    padding: 20px 10px;
     text-align: center;
     font-size: 24px;
     font-weight: 500;
