--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
+html {
+    height: 100%;
+}
 body {
     margin: 0;
     padding: 0;
+    min-height: 100%;
     overflow-x: hidden;
     font-family: 'MetricWeb', sans-serif;
     background-color: #FFF1E0;
