--- a/src/components/ConnectionsGraph/ConnectionsGraph.css
+++ b/src/components/ConnectionsGraph/ConnectionsGraph.css
@@ -2,7 +2,7 @@
     margin: 0;
     text-align: center;
     position: relative;
-    min-height: 500px;
+    height: 100%;
     z-index: 2;
     background-color: #FFF8EF;
 }
