--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,21 @@
 html {
     height: 100%;
+    box-sizing: border-box;
 }
 body {
     margin: 0;
-    padding: 0;
     min-height: 100%;
+    padding-bottom: 250px;
+    position: relative;
     overflow-x: hidden;
     font-family: 'MetricWeb', sans-serif;
     background-color: #FFF1E0;
     color: #333333;
+}
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
 }
 .hidden {
     display: none;
