--- a/src/components/PeopleSlider/PeopleSlider.css
+++ b/src/components/PeopleSlider/PeopleSlider.css
@@ -2,8 +2,6 @@
     outline: none;
 }
 .people-data-wrapper {
-    padding-top: 20px;
-    height: 260px;
     text-align: center;
     position: relative;
     z-index: 2;
@@ -24,28 +22,33 @@
 .people-data-card {
     display: inline-block;
     text-align: center;
-    width: 180px;
+    position: relative;
+    width: 200px;
+    height: 250px;
     background-color: #FFF1E0;
     padding-top: 10px;
-    margin: 20px 5px;
+    margin: 20px 5px 10px 5px;
 }
 .people-card-name {
     margin-top: 20px;
     font-weight: 500;
     font-size: 18px;
 }
-.people-card-details {
-    font-size: 16px;
+.people-card-image {
+    margin-top: 10px;
 }
 .people-card-image > img {
-    width: 80px;
-    height: 80px;
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
 }
 .people-card-cta {
     margin-top: 40px;
-    height: 30px;
-    line-height: 30px;
+    position: absolute;
+    width: 100%;
+    height: 36px;
+    line-height: 36px;
+    bottom: 0;
     background-color: #0F757E;
 }
 .people-card-cta > a {
