--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ body {
     position: relative;
     overflow-x: hidden;
     font-family: 'MetricWeb', sans-serif;
-    background-color: #FFF1E0;
+    background-color: #fff1e5;
     color: #333333;
 }
 *,
