--- a/src/components/PeopleSlider/PeopleSlider.css
+++ b/src/components/PeopleSlider/PeopleSlider.css
@@ -27,7 +27,7 @@
     position: relative;
     width: 200px;
     height: 250px;
-    background-color: #FFF1E0;
+    background-color: #fff1e5;
     padding-top: 10px;
     margin: 20px 5px 10px 5px;
 }
