--- a/src/components/ConnectionsGraph/ConnectionsGraph.css
+++ b/src/components/ConnectionsGraph/ConnectionsGraph.css
@@ -1,8 +1,9 @@
 .connections-graph {
     margin: 0;
     text-align: center;
+    padding: 0 15px;
     position: relative;
-    height: 100%;
+    height: 600px;
     z-index: 2;
     background-color: #FFF8EF;
 }
